test/expected/declare_cnmf_v-c.out
declare f as const non-member function
        ^
9: error: function can not be "const"
